# fuzzomatic

./: .gitignore  README.md  oss-fuzz-projects.csv  pyproject.toml  run-tests.sh  settings.env.sample  settings.yml.sample
fuzzomatic/: batch_fuzzomatic.py  discovery.py  docparse.py  eval_results.py  main.py  oss_fuzz.py
fuzzomatic/approaches/: __init__.py  benches.py  common.py  examples.py  functions.py  readme.py  unit_tests.py
fuzzomatic/semgrep/: fix_empty_functions.yml  fix_unwrap.yml  tests.yml  tests_with_functions.yml
fuzzomatic/templates/fuzz_target/: fuzz_target_bool.j2  fuzz_target_byte_array.j2  fuzz_target_byte_array_length.j2  fuzz_target_primitive.j2  fuzz_target_str.j2  fuzz_target_string.j2
fuzzomatic/templates/fuzz_target/multiple_args/: base.j2
fuzzomatic/templates/prompts/: example_code.j2  fix_code_error.j2  readme.j2  unit_test_code.j2  unit_test_code_with_additional_function.j2
fuzzomatic/tools/: cargo_doc.py  constants.py  llm.py  prompts.py  runtime.py  semgrep.py  utils.py
tests/: test_llm.py  test_readme.py
